--- a/module-03/css/style.css
+++ b/module-03/css/style.css
@@ -2,6 +2,14 @@ html {
     box-sizing: border-box;
 }
 
+body {
+    font-family: 'Playfair Display', serif;
+    font-family: 'Ubuntu', sans-serif;
+    color: #626262;
+    font-size: 14px;
+    line-height: 24px;
+}
+
 *,
 *::before,
 *::after {
@@ -60,4 +68,3 @@ html {
 } */
 
 /* header */
-
