--- a/module-03/css/style.css
+++ b/module-03/css/style.css
@@ -2,46 +2,55 @@ html {
     box-sizing: border-box;
 }
 
-body {
-    font-family: 'Playfair Display', serif;
-    font-family: 'Ubuntu', sans-serif;
-    color: #626262;
-    font-size: 14px;
-    line-height: 24px;
-}
-
 *,
 *::before,
 *::after {
     box-sizing: inherit;
 }
 
+body {
+    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Playfair Display', serif;
+    color: #626262;
+    font-size: 14px;
+    line-height: 24px;
+    margin: 0;
+}
+
 * {
     outline: 1px solid red;
 }
 
-.wrapper {
-    width: 900 px;
+.container {
+    width: 900px;
     margin: 0 auto;
     background-color: #dce7c2;
+}
+
+.img {
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 /* navigation */
 
 .main-menu {
     margin: 0;
-    padding: 0;
+    padding: 76px 164px 102px 164px;
     font-size: 14px;
     list-style: none;
+    text-align: center;
+    vertical-align: middle;
 }
 
 .main-menu-item {
     display: inline-block;
-    margin: 30px;
 }
 
-.main-menu-item:last-child {
-    margin: 30px 0 30px 30px;
+/* must be change */
+.main-menu li:not(:last-child){
+    margin-right: 102px;
 }
 
 .main-menu-link {
@@ -67,4 +76,61 @@ body {
     background-color: rgb(218, 99, 30);
 } */
 
-/* header */
+/* main */
+
+.main-content{
+font-size: 0;
+ 
+}
+
+.main-section-content{
+    display: inline-block;
+    width: 420px;
+    text-align: left;
+    font-size: 0;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 130px;
+}
+
+.main-section-content:not(:nth-child(2n)){
+margin-right: 58px;
+}
+
+.main-section-content:nth-last-child(-n+2){
+    margin-bottom: 0;
+}
+
+.section-content {
+    display: inline-block;
+    font-size: 14px;
+    line-height: 17px;
+    font-family: 'Ubuntu', sans-serif;
+    text-transform: uppercase;
+    color: #b4ad9e;
+    margin: 0;
+    padding: 0;
+    margin-top: 30px;
+}
+
+.title-section {
+    display: inline-block;
+    font-size: 30px;
+    line-height: 36px;
+    font-family: 'Playfair Display', serif;
+    color: #626262;
+    margin: 0;
+    padding: 0;
+}
+
+.content {
+    font-size: 14px;
+    line-height: 24px;
+    font-family: 'Playfair Display', serif;
+    color: #626262;
+    text-transform: none;
+    margin: 0;
+    padding: 0;
+}
+
+/* footer */
