--- a/module-03/css/style.css
+++ b/module-03/css/style.css
@@ -79,14 +79,23 @@ body {
 /* main */
 
 .main-content{
-font-size: 0;
- 
+
 }
 
 .main-section-content{
     display: inline-block;
+    width: 900px;
+    text-align: center;
+    vertical-align: top;
+    margin: 0;
+    font-size: 0px;
+}
+
+.main-subsection-content{
+    display: inline-block;
     width: 420px;
     text-align: left;
+    vertical-align: top;
     font-size: 0;
     margin: 0;
     padding: 0;
@@ -108,9 +117,8 @@ margin-right: 58px;
     font-family: 'Ubuntu', sans-serif;
     text-transform: uppercase;
     color: #b4ad9e;
-    margin: 0;
+    margin-top: 30px 0 26px 0;
     padding: 0;
-    margin-top: 30px;
 }
 
 .title-section {
@@ -120,6 +128,7 @@ margin-right: 58px;
     font-family: 'Playfair Display', serif;
     color: #626262;
     margin: 0;
+    margin-bottom: ;
     padding: 0;
 }
 
