--- a/module-03/css/style.css
+++ b/module-03/css/style.css
@@ -29,8 +29,8 @@ body {
 
 .img {
     display: block;
-    max-width: 100%;
-    height: auto;
+    width: 420px;
+    height: 280px;
 }
 
 /* navigation */
