--- a/module-04/css/style.css
+++ b/module-04/css/style.css
@@ -135,10 +135,6 @@ h2::after {
 .items-products li {
     float: left;
     width: 255px;
-    font-size: 18px;
-    line-height: 32px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
     list-style: none;
     text-transform: uppercase;
     text-decoration: none;
@@ -152,22 +148,16 @@ h2::after {
     margin-bottom: 30px;
 }
 
-.product {
-    /* margin: 0px;
-    padding: 0px; */
-}
-
 .item-products p {
     float: left;
     font-size: 18px;
     line-height: 32px;
     font-family: 'Roboto', sans-serif;
-    font-weight: ;
+    font-weight: 900;
     color: #ffffff;
     height: 40px;
     margin: 0px;
-    /* padding:5px 0px 10px 12px; */
-    padding: 0px 0px 0px 12px;
+    padding: 5px 0px 0px 12px;
 }
 
 .name-product {
@@ -180,19 +170,29 @@ h2::after {
     background-color: #8c8c8c;
 }
 
-.product .name-product:hover,
-.product .name-product:focus {
+.name-product:hover {
     color: #ffffff;
     background-color: #1abc9c;
 }
 
-.product .price-product:hover,
-.product .price-product:focus {
+.price-product:hover {
+    color: #ffffff;
+    background-color: #7fd9c7;
+}
+
+.name-product:focus {
+    color: #ffffff;
+    background-color: #1abc9c;
+}
+
+.price-product:focus {
     color: #ffffff;
     background-color: #7fd9c7;
 }
 
 /* LATEST NEWS */
+
+
 
 .main-title-news {
     font-size: 48px;
@@ -200,8 +200,72 @@ h2::after {
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
     color: #515151;
+    margin: 0px;
     margin-bottom: 106px;
 }
+
+.items-news{
+    margin: 0px;
+    padding: 0px;
+}
+
+.items-news li {
+    float: left;
+    width: 350px;
+    list-style: none;
+    text-decoration: none;
+}
+
+.items-news li:not(:nth-child(3n)) {
+    margin-right: 30px;
+}
+
+/* .news{
+    margin: 0px;
+    padding: 0px;
+} */
+
+.news-name {
+    font-size: 18px;
+    line-height: 26px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    margin: 14px 0px 40px 0px;
+    padding: 0px;
+}
+
+.news-name::after {
+    display: block;
+    width: 136px;
+    height: 3px;
+    background-color: #4ec6ab;
+    content: '';
+    margin-top: 10px;
+}
+
+.news-content {
+    font-weight: 400;
+    margin: 0px;
+    margin-bottom: 14px;
+    padding: 0px;
+}
+
+.download-button{
+    border: none;
+    margin: 0px;
+    padding: 14px 42px;
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: 300;
+    color: #ffffff;
+    background-color: #4ec6ab;
+    margin-bottom: 82px;
+    cursor: pointer;
+}
+
+
+
+
 
 
 /* p::before{
@@ -209,11 +273,18 @@ h2::after {
     color: red;
 }
 
-h2::before {
-    display: block;
-    width: 50px;
-    height: 5px;
-    background-color: red;
-    content: '';
-    margin: 0px auto;
-} */
+.visually-hidden:not(:focus):not(:active),
+input[type='checkbox'].visually-hidden,
+input[type='radio'].visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+*/
