--- a/module-05/css/style.css
+++ b/module-05/css/style.css
@@ -137,7 +137,6 @@ a {
 
 .slider-ctrl-next {
     right: 0px;
-
 }
 
 .slider-ctrl-prev {
@@ -153,19 +152,55 @@ a {
 
 .slides-item {
     position: relative;
+    min-height: 600px;
+    min-width: auto;
+    object-fit: cover;
+    background-image: url(../img/slide4.png);
+
     margin: 0px;
     padding: 0px;
 }
 
-.slides-image {
+.overlay {
+    position: absolute;
+
+    /* background-color: rgb(24, 24, 25); */
+    left: 50%;
+    transform: translateX(-50%);
+    /* z-index: 1; */
+}
+
+
+
+
+
+
+
+
+
+
+/* .slides-image {
     position: absolute;
     min-height: 600px;
     object-fit: cover;
     left: 50%;
     transform: translateX(-50%);
-}
+    opacity: 0.52;
+} */
 
-.slides-description {
+/* .slides:hover,
+.slides-title:hover{
+opacity: 1;
+color: #ff7200;
+} */
+
+
+
+
+
+
+
+.slides-content {
     position: absolute;
     top: 208px;
     left: 184px;
@@ -176,13 +211,13 @@ a {
 .slides-title {
     font-size: 60px;
     font-weight: 900;
-    color: #ff7200;
+    color: #ffffff;
     margin: 0px 0px 6px 0px;
     padding: 0px;
 
 }
 
-.slides-text {
+.slides-description {
     font-size: 24px;
     line-height: 54px;
     font-weight: 300;
@@ -190,6 +225,7 @@ a {
     margin: 0px;
     padding: 0px;
 }
+
 
 
 
